// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ObjectInspector > passes \`nodeRenderer\` prop to <TreeView/> 1`] = `
<div>
  <div
    role="tree"
    style="padding: 0px; margin: 0px; list-style-type: none; height: 400px; overflow: auto;"
  >
    <div
      style="height: 16px; width: 100%; position: relative;"
    >
      <div
        aria-level="1"
        data-index="0"
        role="treeitem"
        style="color: black; background-color: white; line-height: 1.2; cursor: default; box-sizing: border-box; list-style: none; font-family: Menlo, monospace; font-size: 11px; white-space: nowrap; position: absolute; top: 0px; left: 0px; width: 100%; height: 16px; transform: translateY(0px);"
      >
        <div
          style="padding-left: 0px;"
        >
          <span>
            unit test
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ObjectInspector > should render 1`] = `
<div>
  <div
    role="tree"
    style="padding: 0px; margin: 0px; list-style-type: none; height: 400px; overflow: auto;"
  >
    <div
      style="height: 16px; width: 100%; position: relative;"
    >
      <div
        aria-level="1"
        data-index="0"
        role="treeitem"
        style="color: black; background-color: white; line-height: 1.2; cursor: default; box-sizing: border-box; list-style: none; font-family: Menlo, monospace; font-size: 11px; white-space: nowrap; position: absolute; top: 0px; left: 0px; width: 100%; height: 16px; transform: translateY(0px);"
      >
        <div
          style="padding-left: 0px;"
        >
          <span
            style="color: rgb(128, 128, 128);"
          >
            undefined
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ObjectInspector Content > should render with Maps with Regex and Maps keys 1`] = `
<div>
  <div
    role="tree"
    style="padding: 0px; margin: 0px; list-style-type: none; height: 400px; overflow: auto;"
  >
    <div
      style="height: 32px; width: 100%; position: relative;"
    >
      <div
        aria-expanded="true"
        aria-level="1"
        data-index="0"
        role="treeitem"
        style="color: black; background-color: white; line-height: 1.2; cursor: default; box-sizing: border-box; list-style: none; font-family: Menlo, monospace; font-size: 11px; white-space: nowrap; position: absolute; top: 0px; left: 0px; width: 100%; height: 16px; transform: translateY(0px);"
      >
        <div
          style="padding-left: 0px;"
        >
          <span
            style="color: #6e6e6e; display: inline-block; font-size: 12px; margin-right: 3px; user-select: none; transform: rotateZ(90deg);"
          >
            ▶
          </span>
          <span
            style="font-style: italic;"
          >
            Map 
          </span>
          <span
            style="font-style: italic;"
          >
            {
            }
          </span>
        </div>
      </div>
      <div
        aria-level="2"
        data-index="1"
        role="treeitem"
        style="color: black; background-color: white; line-height: 1.2; cursor: default; box-sizing: border-box; list-style: none; font-family: Menlo, monospace; font-size: 11px; white-space: nowrap; position: absolute; top: 0px; left: 0px; width: 100%; height: 16px; transform: translateY(16px);"
      >
        <div
          style="padding-left: 12px;"
        >
          <span
            style="white-space: pre; font-size: 12px; margin-right: 3px; user-select: none;"
          >
             
          </span>
          <span>
            <span
              style="color: rgb(196, 26, 22);"
            >
              /\\S/g
            </span>
            <span>
              : 
            </span>
            <span
              style="color: rgb(196, 26, 22);"
            >
              "
              Regular Expression key
              "
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
